# tree-shaker

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: autofix.yml  bench.yml  cr.yml  pages.yaml  pages.yml  test.yml
benches/: basic.rs
benches/fixtures/: vue-starter.js
crates/analyzer/: Cargo.toml
crates/tree_shaker/: Cargo.toml
crates/tree_shaker/src/: analyzer.rs  config.rs  lib.rs  main.rs  transformer.rs
crates/tree_shaker/src/builtins/: known_modules.rs  mod.rs
crates/tree_shaker/src/builtins/globals/: constants.rs  mod.rs
crates/tree_shaker/src/builtins/prototypes/: array.rs  boolean.rs  function.rs  mod.rs  null.rs  number.rs  object.rs  promise.rs  string.rs  symbol.rs  utils.rs
crates/tree_shaker/src/builtins/react/: class_names.rs  dependencies.rs  forward_ref.rs  jsx.rs  jsxs.rs  memo.rs
crates/tree_shaker/src/consumable/: impls.rs  lazy.rs  once.rs
crates/tree_shaker/src/entity/: arguments.rs  array.rs  builtin_fn.rs  class.rs  collected.rs  collector.rs  computed.rs  consumed_object.rs  entity.rs  factory.rs  function.rs  literal.rs  logical_result.rs  mod.rs  primitive.rs  react_element.rs  symbol.rs  typeof_result.rs  union.rs  unknown.rs
crates/tree_shaker/src/entity/object/: delete.rs  enumerate.rs  get.rs  init.rs  mod.rs  property.rs  set.rs
crates/tree_shaker/src/mangling/: atom.rs  constraint.rs  mod.rs
crates/tree_shaker/src/nodes/expr/: array_expression.rs  assignment_expression.rs  binary_expression.rs  conditional_expression.rs  literals.rs  member_expression.rs  mod.rs  new_expression.rs  object_expression.rs  sequence_expression.rs  this_expression.rs  unary_expression.rs  update_expression.rs
crates/tree_shaker/src/nodes/jsx/: jsx_attribute_name.rs  jsx_attribute_value.rs  jsx_attributes.rs  jsx_children.rs  jsx_element_name.rs  jsx_fragment.rs  jsx_member_expression_object.rs  jsx_spread_child.rs  mod.rs
crates/tree_shaker/src/nodes/misc/: binding_identifier.rs  catch_clause.rs  function.rs  function_body.rs  identifier_reference.rs  private_identifier.rs  property_definition.rs  property_key.rs  variable_declaration.rs  variable_declarator.rs
crates/tree_shaker/src/nodes/stmt/: block_statement.rs  break_statement.rs  continue_statement.rs  declaration.rs  do_while_statement.rs  for_in_statement.rs  for_of_statement.rs  for_statement.rs  if_statement.rs  labeled_statements.rs  mod.rs  return_statement.rs  statement_vec.rs  switch_statement.rs  try_statement.rs  while_statement.rs
crates/tree_shaker/src/scope/: cf_scope.rs  conditional.rs  exhaustive.rs  loop.rs  mod.rs  variable_scope.rs
crates/tree_shaker/src/scoping/: call_scope.rs  mod.rs
crates/tree_shaker/src/utils/: ast.rs  callee_info.rs  data.rs  escape_template_element_value.rs  f64_with_eq.rs  mod.rs  private_identifier_name.rs  symbol_id.rs
crates/tree_shaker/tests/: mod.rs
crates/tree_shaker/tests/fixtures/: array_expression.js  arrow_function_expression.js  assignment_expression.js  async_await.js  binding_pattern.js  conditional_expression.js  do_while_statement.js  exec_exhaustively.js  if_statement.js  lifted_declaration.js  member_expression.js  meta_property.js  module_declaration.js  prototypes.js  recursion.js  switch_statement.js  template_literal.js  throw_catch.js  unary_expression.js  update_expression.js  var_declaration.js
crates/tree_shaker/tests/fixtures/mangling/: jsx.js
crates/tree_shaker/tests/fixtures/react/: jsx.js
crates/tree_shaker/tests/snapshots/: test@exec_exhaustively.js.snap  test@if_statement.js.snap  test@mangling__jsx.js.snap  test@mangling__object_property.js.snap  test@meta_property.js.snap  test@object_expression.js.snap  test@prototypes.js.snap  test@pure_annotation.js.snap  test@react__context.js.snap  test@recursion.js.snap  test@switch_statement.js.snap  test@template_literal.js.snap  test@throw_catch.js.snap  test@unary_expression.js.snap
data/: array.rs
docs/: conditional.md  execution-dep.md  function-call.md  index.md  literal-collector.md
napi/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
napi/scripts/: patch.cjs  patch.mjs
napi/src/: lib.rs
playground/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
playground/src/: App.vue  Editor.vue  Input.vue  Logs.vue  examples.ts  main.ts  shiki.ts  states.ts  styles.css
src/: analyzer.rs  ast.rs  ast_type.rs  config.rs  context.rs  data.rs  dep.rs  effect_builder.rs  lib.rs  logger.rs  main.rs  symbol.rs  transformer.rs  tree_shaker.rs  utils.rs
src/builtins/: constants.rs  environment.rs  global_this.rs  globals.rs  import_meta.rs  known_modules.rs  mod.rs  utils.rs
src/consumable/: collector.rs  impls.rs  lazy.rs  mod.rs  node.rs
src/entity/: arguments.rs  array.rs  builtin_fn.rs  class.rs  collected.rs  collector.rs  computed.rs  (+32 more)
tasks/benchmark/: Cargo.toml
tasks/benchmark/benches/: basic.rs
tasks/benchmark/src/: lib.rs
test/: engine262.skiplist  ignored.json  output.cjs  package.json  pnpm-lock.yaml  preprocessor.cjs  preprocessor.js  v8_test262.status
wasm/: Cargo.toml
wasm/src/: lib.rs
(+463 files in other folders)
