[workspace]
members = ["./napi", "./wasm"]

[package]
name = "tree-shake"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bitflags = "2.6.0"
dashmap = "6.0.1"
insta = { version = "1.39.0", features = ["glob"] }
oxc = { version = "0.29.0", features = ["codegen", "semantic", "minifier"] }
regex = "1.10.6"
rustc-hash = "2.0.0"
