[workspace]
members = ["./napi", "./wasm"]

[package]
name = "tree-shake"
version = "0.1.0"
edition = "2021"

[lib]

[features]
flame = ["dep:flame", "dep:flamescope"]

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.20", features = ["derive"] }
dashmap = "6.0.1"
flame = { version = "0.2.2", optional = true }
flamescope = { version = "0.1.3", optional = true }
insta = { version = "1.39.0", features = ["glob"] }
line-index = "0.1.2"
oxc = { version = "0.36.0", features = ["codegen", "semantic", "minifier"] }
regex = "1.10.6"
rustc-hash = "2.0.0"

[dev-dependencies]
codspeed-criterion-compat = "2.7.2"
criterion = "0.5.1"

[[bench]]
name = "basic"
harness = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false     # Set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust
