[workspace]
resolver = "2"
members = ["crates/*", "packages/napi", "packages/wasm", "tasks/benchmark"]

[workspace.package]
authors = ["_Kerman <kermanx@qq.com>"]
categories = ["compilers", "development-tools", "web-programming"]
edition = "2021"
homepage = "https://kermanx.github.io/tree-shaker"
keywords = ["JavaScript", "TypeScript", "oxc"]
license = "MIT"
repository = "https://github.com/KermanX/tree-shaker"
rust-version = "1.78"                                              # Should sync with oxc
description = "An experimental tree shaker for JS based on Oxc."

[workspace.dependencies]
tree_shaker = { path = "crates/tree_shaker" }

bitflags = "2.6.0"
clap = "4.5.20"
dashmap = "6.0.1"
flame = "0.2.2"
flamescope = "0.1.3"
line-index = "0.1.2"
oxc = "0.44.0"
oxc_ecmascript = "0.44.0"
oxc_index = "2.0.0"
oxc_syntax = "0.44.0"
regex = "1.10.6"
rustc-hash = "2.0.0"
insta = "1.39.0"
criterion = { package = "codspeed-criterion-compat", version = "*" }
napi = "2.12.2"
napi-derive = "2.12.2"
napi-build = "2.0.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false     # Set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust

[workspace.lints.clippy]
dbg_macro = "deny"
empty_drop = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

missing_transmute_annotations = "allow"
too_many_arguments = "allow"
