[package]
edition = "2021"
name = "kermanx_tree-shaker_wasm"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
tree-shake = { path = "../" }
oxc = { version = "0.34.0", features = ["codegen", "semantic", "minifier"] }
wasm-bindgen = "0.2.93"
