[package]
name = "benchmark"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
test = false
bench = false
doctest = false

[[bench]]
name = "basic"
harness = false

[dependencies]
criterion = { workspace = true }
codspeed-criterion-compat = { workspace = true }
tree_shaker = { workspace = true }
